--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=YoursMX
 APP_ENV=local
 APP_KEY=base64:CRHbZDaD3b/1PIKlLGsXiTsCJfazTwIOIQlmJFlF8YM=
 APP_DEBUG=true
@@ -7,8 +7,8 @@ APP_URL=http://localhost
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=YOURSMX
+DB_PORT=3307
+DB_DATABASE=YRSMX
 DB_USERNAME=root
 DB_PASSWORD=root
 
@@ -21,7 +21,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
+MAIL_DRIVER=log
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
