--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
     "vue": "^2.1.10",
-    "ebm": "easyboxmodel/ebm@3.1.2"
+    "ebm": "easyboxmodel/ebm"
   }
 }
