--- a/.env
+++ b/.env
@@ -31,3 +31,7 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+AWS_KEY=AKIAJPY7KJOBB4LBFOYA
+AWS_SECRET=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
+AWS_REGION=us-west-2
