--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "easyboxmodel/sections": "dev-master"
+        "easyboxmodel/sections": "dev-master",
+        "aws/aws-sdk-php-laravel": "~3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
