--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,11 @@
     ],
     "require": {
         "php": ">=5.6.4",
+        "aws/aws-sdk-php-laravel": "~3.0",
+        "easyboxmodel/sections": "dev-master",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "easyboxmodel/sections": "dev-master",
-        "aws/aws-sdk-php-laravel": "~3.0"
+        "league/flysystem-aws-s3-v3": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
