--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "php": ">=5.6.4",
         "aws/aws-sdk-php-laravel": "~3.0",
         "easyboxmodel/sections": "dev-master",
+        "fightbulc/moment": "^1.26",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "league/flysystem-aws-s3-v3": "^1.0"
