--- a/vms/docker-compose.yml
+++ b/vms/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     applications:
       image: tianon/true
       volumes:
-        - ${APPLICATION}:/var/www
+        - ${APPLICATION}:/var/www/html
 
 ### Workspace Utilities Container ###########################
 
