--- a/vms/nginx/sites/default.conf
+++ b/vms/nginx/sites/default.conf
@@ -4,7 +4,7 @@ server {
     listen [::]:80 default_server ipv6only=on;
 
     server_name localhost;
-    root /home/ubuntu/yrsmx/public;
+    root /var/www/public;
     index index.php index.html index.htm;
 
     location / {
