Updates container names

--- a/vms/docker-compose.yml
+++ b/vms/docker-compose.yml
@@ -12,6 +12,7 @@ services:
 ### Workspace Utilities Container ###########################
 
     workspace:
+      container_name: YRSMX
       build:
         context: ./workspace
         args:
@@ -55,6 +56,7 @@ services:
 ### PHP-FPM Container #######################################
 
     php-fpm:
+      container_name: php-fpm
       build:
         context: ./php-fpm
         args:
@@ -110,6 +112,7 @@ services:
 ### Nginx Server Container ##################################
 
     nginx:
+      container_name: nginx
       build:
         context: ./nginx
         args:
@@ -192,6 +195,7 @@ services:
 ### MySQL Container #########################################
 
     mysql:
+      container_name: mysql
       build:
         context: ./mysql
       environment:
