--- a/vms/docker-compose.yml
+++ b/vms/docker-compose.yml
@@ -203,6 +203,7 @@ services:
       volumes:
         - ${DATA_SAVE_PATH}/mysql:/var/lib/mysql
         - ${MYSQL_ENTRYPOINT_INITDB}:/docker-entrypoint-initdb.d
+        - ./mysql/my.cnf:/etc/mysql/conf.d/my.cnf
       ports:
         - "${MYSQL_PORT}:3306"
       networks:
