--- a/vms/docker-compose.yml
+++ b/vms/docker-compose.yml
@@ -203,7 +203,7 @@ services:
       volumes:
         - ${DATA_SAVE_PATH}/mysql:/var/lib/mysql
         - ${MYSQL_ENTRYPOINT_INITDB}:/docker-entrypoint-initdb.d
-        - ./mysql/my.cnf:/etc/mysql/conf.d/my.cnf
+        - ./mysql/config:/etc/mysql/conf.d
       ports:
         - "${MYSQL_PORT}:3306"
       networks:
