Updates mysql img to 5.7

--- a/vms/mysql/Dockerfile
+++ b/vms/mysql/Dockerfile
@@ -1,4 +1,4 @@
-FROM mysql:8.0
+FROM mysql:5.7
 
 MAINTAINER Mahmoud Zalt <mahmoud@zalt.me>
 
@@ -12,7 +12,7 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 RUN chown -R mysql:root /var/lib/mysql/
 
-ADD my.cnf /etc/mysql/conf.d/my.cnf
+ADD config/my.cnf /etc/mysql/conf.d/my.cnf
 
 CMD ["mysqld"]
 
