Restores my.cnf

--- a/vms/mysql/Dockerfile
+++ b/vms/mysql/Dockerfile
@@ -1,7 +1,5 @@
 FROM mysql:5.7
 
-MAINTAINER Mahmoud Zalt <mahmoud@zalt.me>
-
 #####################################
 # Set Timezone
 #####################################
@@ -12,7 +10,7 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 RUN chown -R mysql:root /var/lib/mysql/
 
-ADD config/my.cnf /etc/mysql/conf.d/my.cnf
+ADD my.cnf /etc/mysql/conf.d/my.cnf
 
 CMD ["mysqld"]
 
