--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
         "aws/aws-sdk-php-laravel": "~3.0",
         "easyboxmodel/sections": "dev-master",
         "fightbulc/moment": "^1.26",
+        "fzaninotto/faker": "^1.6",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "league/flysystem-aws-s3-v3": "^1.0"
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.7"
     },
