Updates laravel to 5.5.*

--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,15 @@
         "easyboxmodel/sections": "dev-master",
         "fightbulc/moment": "^1.26",
         "fzaninotto/faker": "^1.6",
-        "laravel/framework": "5.4.*",
+        "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "league/flysystem-aws-s3-v3": "^1.0"
+        "league/flysystem-aws-s3-v3": "^1.0",
+        "swiftmailer/swiftmailer": "^6.0"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "~6.0",
+        "filp/whoops": "~2.0"
     },
     "autoload": {
         "classmap": [
